Fix overflow issue for mobile

--- a/styles/index.css
+++ b/styles/index.css
@@ -116,7 +116,93 @@ p.description {
   text-transform: uppercase;
 }
 
-@media (max-width: 1080px) {
+@media screen and (max-width: 800px) {
+  html,
+  body {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
+  }
+
+  body {
+    background: center/cover url("../assets/home/background-home-mobile.jpg");
+    background-attachment: fixed;
+  }
+
+  h1 {
+    font-size: 5rem;
+    margin-bottom: 35px;
+    margin-top: 0;
+    padding-left: 0;
+  }
+
+  h5 {
+    margin-bottom: 25px;
+    font-size: 1rem;
+  }
+
+  .logo {
+    top: 25px;
+    left: 35px;
+  }
+
+  .nav-hamburger {
+    position: absolute;
+    right: 35px;
+    top: 38px;
+    visibility: visible;
+  }
+
+  .nav-bar {
+    visibility: hidden;
+  }
+
+  .bottom-container {
+    display: block;
+    padding: 0 25px;
+    text-align: center;
+    top: 115px;
+  }
+
+  p.description {
+    font-size: 0.9375rem;
+    line-height: 1.5625;
+    width: 65%;
+    margin: 0 auto;
+  }
+
+  @media screen and (max-width: 500px) {
+    p.description {
+      width: 100%;
+    }
+  }
+
+  .explore-btn {
+    height: 150px;
+    width: 150px;
+  }
+
+  .explore-text {
+    font-size: 1.25rem;
+  }
+
+  .explore-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 90px;
+  }
+
+  .explore-btn {
+    height: 150px;
+    position: inherit;
+    width: 150px;
+  }
+}
+
+
+@media screen and (max-width: 1080px) and (min-width: 800px) {
   body {
     background: center/cover url("../assets/home/background-home-tablet.jpg");
     background-attachment: fixed;
@@ -150,6 +236,11 @@ p.description {
     width: 65%;
   }
 
+  .nav-text {
+    font-size: 0.875rem;
+    margin: 0 15px;
+  }
+
   .nav-bar:before {
     width: 100%;
   }
@@ -180,51 +271,5 @@ p.description {
     height: 242px;
     position: inherit;
     width: 242px;
-  }
-}
-
-@media (max-width: 809px) {
-  body {
-    background: center/cover url("../assets/home/background-home-mobile.jpg");
-    background-attachment: fixed;
-  }
-
-  h1 {
-    font-size: 5rem;
-  }
-
-  h5 {
-    font-size: 1rem;
-  }
-
-  .nav-hamburger {
-    position: absolute;
-    right: 35px;
-    top: 38px;
-    visibility: visible;
-  }
-
-  .nav-bar {
-    visibility: hidden;
-  }
-
-  .bottom-container {
-    padding: 0 25px;
-    top: 115px;
-  }
-
-  p.description {
-    font-size: 0.9375rem;
-    line-height: 1.5625;
-    width: 100%;
-  }
-
-  .explore-btn {
-    height: 150px;
-    width: 150px;
-  }
-
-  .explore-text {
-    font-size: 1.25rem;
   }
 }
